Closed Bug 252280 Opened 20 years ago Closed 20 years ago

dragging xul splitter gets stuck (sidebar, mailnews..)

Categories

(Core :: Layout, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: basic, Assigned: roc)

References

Details

(Keywords: regression)

Attachments

(1 file)

recent cvs trunk build 2004/07/20 linux gtk2

can't drag splitter. If I try, the splitter jumps to to end and refuses to move
after that.
I probably shouldn't file bugs just before I go to sleep.

tested this on the sidebar and mail pane splitters with a recent seamonkey cvs
build. related to fix for bug 53966 maybe?
Assignee: general → nobody
Component: Browser-General → Layout
QA Contact: general → core.layout
Summary: dragging splitter gets stuck → dragging xul splitter gets stuck
ok did more testing, it seems that I cannot drag out of the splitter, meaning
when I drag, I cannot "mouseout" of the splitter, or it will jump.
OS: Linux → All
Hardware: PC → All
*** Bug 252582 has been marked as a duplicate of this bug. ***
Summary: dragging xul splitter gets stuck → dragging xul splitter gets stuck (sidebar, mailnews..)
upping severity. This is close to being a blocker for those who don't know how
to reset the splitters to defaults.. I
 dragged a splitter in  mail and now I can't see my mail: it's to the right of a
splitter stuck along right side of pane
Severity: normal → critical
Flags: blocking1.8a3?
Backing out the fix for bug 53966 allows a splitter to be dragged.
Assignee: nobody → roc
Severity: critical → normal
Severity: normal → critical
How do I reset the splitter?
pavel:
Brutal method: quit Mozilla, delete localstore.rdf in your profile dir.
More elegant: quit Mozilla, EDIT that file in a plain text editor.

I deleted it, myself ;)

If localstore.rdf is missing on start, Mozilla creates a new with defaults for
window and pane sizes, columns in mail, buttons on toolbar etc.
Attached patch fixSplinter Review
Splitter frames created a view for themselves and relied on that view capturing
the mouse when the user clicked on the splitter. Now that views don't capture
the mouse by default, this broke. Splitters need to implement
nsIFrame::GetMouseCapturer to explicitly say that they want to capture the
mouse.
Comment on attachment 153996 [details] [diff] [review]
fix

Simple fix for a serious regression...
Attachment #153996 - Flags: superreview?(dbaron)
Attachment #153996 - Flags: review?(dbaron)
Attachment #153996 - Flags: superreview?(dbaron)
Attachment #153996 - Flags: superreview+
Attachment #153996 - Flags: review?(dbaron)
Attachment #153996 - Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
*** Bug 252678 has been marked as a duplicate of this bug. ***
Flags: blocking1.8a3?
Blocks: 252770
No longer blocks: 252770
*** Bug 252770 has been marked as a duplicate of this bug. ***
*** Bug 292142 has been marked as a duplicate of this bug. ***
Well, is this solved?

Yes. With the Windows version, it is solved but not with the Mac version.
I tried vnk0.9.85 2/28/2005 along with the Firefox.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: