Bug 252280. Make XUL splitter frames explicitly say that they need to capture the mouse. r+sr=dbaron