layout/xul/base/src/nsSplitterFrame.h
@@ -113,6 +113,8 @@ public:
 
   virtual void GetInitialOrientation(PRBool& aIsHorizontal); 
 
+  virtual nsIView* GetMouseCapturer() const { return GetView(); }
+
 private:
 
   friend class nsSplitterFrameInner;
